<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">设置</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_switch_user">切换用户</string>
    <string name="app_name">选课助手</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_login_string">自动登录</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_selectIt_string">选择</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="course_school">开课院系:</string>
    <string name="course_type_string">课程类型:</string>
    <string name="loading_string">正在加载</string>
    <string name="loggingin_string">正在登录</string>
    <string name="loggingin_wait_string">正在登录</string>
    <string name="login_hint">合肥校区使用信息门户账号登录\n宣传校区使用教学管理系统账号登录</string>
    <string name="login_success_string">登录成功</string>
    <string name="login_title_string">登录</string>
    <string name="network_error_string">网络或服务器出错</string>
    <string name="no_new_submit_data">暂时没有待提交新选课</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_sno">学号</string>
    <string name="pwd_error_string">密码错误</string>
    <string name="remove_confirm_button_negative_string">取消</string>
    <string name="remove_confirm_button_positive_string">确定</string>
    <string name="remove_confirm_message_string">确定移除%s?</string>
    <string name="remove_confirm_title_string">移除课程</string>
    <string name="section_1">已选课程</string>
    <string name="section_2">全部课程</string>
    <string name="section_3">等待提交</string>
    <string name="submit_confirm_title">确定提交</string>
    <string name="title_activity_main">选课助手</string>
    <string name="string_selected">已选择</string>
    <string name="string_select">选择</string>
    <string name="string_assessment">考核方式:%s</string>
    <string name="string_range">优选范围: \n%s</string>
    <string name="string_timeAndPlace">时间地点:\n%s</string>
    <string name="string_prohibit">禁选专业:%s</string>
    <string name="string_get_data_failed">获取数据失败,可能选课时间未到或登陆信息失效</string>
    <string name="string_confirm">确定</string>
    <string name="string_cancel">取消</string>
    <string name="submit_result_title">提交结果</string>
    <string name="string_course_code">课程代码：</string>
    <string name="action_help">帮助</string>
    <string name="help_dialog_title">操作说明</string>
    <string name="help_dialog_message">在已选课程界面,长按可移除已选课程\n在等待提交界面,长按可以删除该课程</string>
    <string name="xuancheng_campus">宣城校区</string>
    <string name="login_failed_string">登录信息错误</string>
    <string name="no_selected">当前没有已经选中的课程</string>
    <string name="action_clear">选课成功，清除缓存</string>
    <string name="action_cancel">不清除缓存，稍后重试</string>
    <string name="empty_to_submit">你确定要清空所有已选课程吗？请谨慎操作！！</string>
    <string name="action_search">搜索</string>
    <string name="classroom_members">教学班成员</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_semester">当前选课学期</string>
</resources>
